fix: minor grid layout bug

--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -30,7 +30,7 @@
   display: grid;
   grid-gap: 17px 25.2px;
   grid-template-columns: repeat(4, auto);
-  grid-template-rows: repeat(4, auto);
+  grid-template-rows: repeat(2, auto);
   margin: 0 auto;
   margin-top: 65px;
 
